name:               curl
version:            1.3.8.3
synopsis:           Haskell binding to libcurl
description:
    libcurl is a client-side URL transfer library, supporting FTP, FTPS, HTTP,
    HTTPS, SCP, SFTP, TFTP, TELNET, DICT, LDAP, LDAPS and FILE.
    libcurl supports SSL certificates, HTTP POST, HTTP PUT, FTP uploading,
    HTTP form based upload, proxies, cookies, user+password authentication
    (Basic, Digest, NTLM, Negotiate, Kerberos4), file transfer resume,
    http proxy tunneling and more!
    .
    This package provides a Haskell binding to libcurl.
category:           Network
license:            BSD3
license-file:       LICENSE
author:             Sigbjorn Finne
maintainer:         Don Stewart <dons00@gmail.com>
build-type:         Configure
cabal-version:      >= 1.6
extra-source-files: configure, configure.ac, curl.buildinfo.in, CHANGES

library
  Exposed-modules: Network.Curl
                   Network.Curl.Code
                   Network.Curl.Info
                   Network.Curl.Opts
                   Network.Curl.Post
                   Network.Curl.Types
                   Network.Curl.Easy
                   Network.Curl.Debug

  c-sources:        curlc.c
  Extra-libraries:  curl
  Extensions:       CPP, ForeignFunctionInterface
  Ghc-options:      -Wall

  Build-Depends: base
               , containers
               , bytestring >= 0.9

source-repository head
  type:     git
  location: git://github.com/galoisinc/curl.git

